# QuizMonkey

./: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
src/: main.py  state.json
src/quizzes/: Weltgeographie.csv  Wirtschaft_Grundlagen.csv  myFirstQuiz.csv
