[project]
name = "skymonkey"
version = "0.1.0"
description = "SkyMonkey - a cross-platform custom quiz app"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "flet==0.82.0"
]

[tool.flet]
org = "com.maxdev"
product = "SkyMonkey"
icon = "src/assets/icon.png"

[tool.flet.app]
path = "src"
module = "main"

[tool.flet.ios]
bundle_id = "com.maxdev.skymonkey"
