[project]
name = "quizmonkey"
version = "0.1.1"
description = "QuizMonkey - a cross-platform custom quiz app"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "flet==0.82.0"
]

[tool.flet]
org = "com.maxdev"
product = "QuizMonkey"
icon = "src/assets/icon.png"

[tool.flet.app]
path = "src"
module = "main"

[tool.flet.ios]
bundle_id = "com.maxdev.monkeyquiz"
team_id = "W45DGNPZ4Q"
provisioning_profile = "MonkeyQuiz AppStore"
signing_certificate = "Apple Distribution: MAXIMILIAN GELDNER (W45DGNPZ4Q)"
export_method = "app-store"

[tool.flet.ios.info]
NSLocationWhenInUseUsageDescription = "Wird derzeit nicht verwendet."
NSPhotoLibraryUsageDescription = "Wird derzeit nicht verwendet."
NSCameraUsageDescription = "Wird derzeit nicht verwendet."

# Makes QuizMonkey show up under "Open in..." in the iOS share sheet for CSV
# files. iOS then copies the file into Documents/Inbox, which the app scans on
# launch and on resume. Copy (not in-place) is deliberate: the app owns its
# quiz files afterwards.
LSSupportsOpeningDocumentsInPlace = false

[[tool.flet.ios.info.CFBundleDocumentTypes]]
CFBundleTypeName = "CSV Quiz"
CFBundleTypeRole = "Editor"
LSHandlerRank = "Alternate"
LSItemContentTypes = ["public.comma-separated-values-text", "public.csv"]